--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,20 @@
 			<artifactId>spring-security-acl</artifactId>
 			<version>4.0.4.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
+		<!-- Java Mail-->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
