--- a/pom.xml
+++ b/pom.xml
@@ -219,9 +219,27 @@
 		
 		<!-- FaceBook 연동 -->
 		<dependency>
-			<groupId>org.springframework.social</groupId>
-			<artifactId>spring-social-facebook</artifactId>
-			<version>1.1.1.RELEASE</version>
+		    <groupId>org.springframework.social</groupId>
+		    <artifactId>spring-social-facebook</artifactId>
+		    <version>2.0.3.RELEASE</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.springframework.social</groupId>
+		    <artifactId>spring-social-facebook-web</artifactId>
+		    <version>2.0.3.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.social</groupId>
+		    <artifactId>spring-social-core</artifactId>
+		    <version>1.1.4.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.social</groupId>
+		    <artifactId>spring-social-config</artifactId>
+		    <version>1.1.4.RELEASE</version>
 		</dependency>
 
 	</dependencies>
